# los-tres-chanchitos

./: .dockerignore  .editorconfig  .gitattributes  .gitignore  Dockerfile  LICENSE  README.md  RELEASE.md  build.sh  generate-requirements.sh  pyproject.toml  requirements-dev.txt  requirements-release.txt  requirements.txt
.github/workflows/: validate.yml
src/los_tres_chanchitos/: __init__.py  cli.py  defaults.py  models.py  narrator.py  writer.py
tests/: test_cli.py  test_defaults.py  test_models.py  test_narrator.py  test_version.py  test_writer.py
